--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,110 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <main class="card">
+        <section class="left-card" >
+            <div class="container">
+                <h1 class="title">Alex <br> Micheev</h1>
+                <div class="information">
+                    <div class="information__wrapper">
+                        <div class="information__inner">
+                            <div class="information__img-wrapper" >
+                                <img src="icons/bag.svg" alt="bag" class="imformation__logo">
+                            </div>
+                            <div class="information__descr">
+                                Occupation  
+                                <span >Student</span>
+                            </div>
+                        </div>
+                        <div class="information__inner">
+                            <div class="information__img-wrapper">
+                                <img src="icons/location.svg" alt="bag" class="imformation__logo">
+                            </div>
+                            <div class="information__descr">
+                                Location
+                                <span>Copenhagen, Denmark</span>
+                            </div>
+                        </div>
+                        <div class="information__inner">
+                            <div class="information__img-wrapper" >
+                                <img src="icons/person.svg" alt="bag" class="imformation__logo">
+                            </div>               
+                            <div class="information__descr">
+                                Age
+                                <span >44</span>
+                            </div>
+                        </div>
+                        <div class="information__inner">
+                            <div class="information__img-wrapper" >
+                                <img src="icons/home.svg" alt="bag" class="imformation__logo">
+                            </div>
+                            <div class="information__descr">
+                                Family
+                                <span>Married, 2 children</span>
+                            </div>
+                        </div>
+                    </div>                   
+                </div>
+                <div class="tech">
+                    <div class="tech__wrapper">
+                        <h2 class="tech__title">Tech</h2>
+                        <div class="tech__wrapper-skills">
+                            <p class="tech__descr">
+                                Internet</p>
+                            <div class="tech__inner-skill">
+                                <span class="tech__inner-skill_white tech__inner-skill_white-1"></span>
+                            </div>
+                        </div>
+                        <div class="tech__wrapper-skills">
+                            <p class="tech__descr">
+                                Social Media</p>
+                            <div class="tech__inner-skill">
+                                <span class="tech__inner-skill_white tech__inner-skill_white-2"></span>
+                            </div>
+                        </div>
+                        <div class="tech__wrapper-skills">
+                            <p class="tech__descr">
+                                Online Shopping</p>
+                            <div class="tech__inner-skill">
+                                <span class="tech__inner-skill_white tech__inner-skill_white-3" ></span>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <section class="center-card">
+            <div class="container">
+                <div class="center-card__wrapper">
+                    <div class="center-card__section">
+                        <h2 class="center-card__title">
+                            Biography</h2>
+                        <p class="center-card__descr">Alma and her husband have 2 kids: a teenager and a 9-year-old. Now they can focus more on their carreers but their main worry is about their sons education and health. With a busy week days, the time they can really get togther as a family is during the dinners time and weekends. So their meal is a really special part of their days. She loves to use avocados in her diet. Interested in gardening.</p>
+                    </div>
+                    <div class="center-card__section">
+                        <h2 class="center-card__title">Needs</h2>
+                        <ul class='center-card__list'>
+                            <li class="center-card__item">Be ready for holiday family gathering as well as for light dinner during the day.</li>
+                            <li class="center-card__item">Find balance between feeling good about herself, being able to maintain her lifestyle, while contributing with the world.</li>
+                            <li class="center-card__item">Wise choices of the brands and respect to environment and sustainability is fundamental for her.</li>
+                        </ul>
+                    </div>
+                    <div class="center-card__section">
+                        <h2 class="center-card__title">Pain points</h2>
+                        <p class="center-card__descr">Alma need to find flexible solution that can help her to optimize her time while dedicating herself to her carreer, kids and making sure to maintain a health lifestyle. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="right-card" >
+            <div class="container_large container">
+                <div class="right-card__descr">
+                    It is very important for me to have fresh, tasty products at hand.
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="js/script.js" ></script>
 </body>
 </html>
