--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <main class="card">
+        <div class="container">
         <section class="left-card" >
-            <div class="container">
+            <div class="container-inner">
                 <h1 class="title">Alex <br> Micheev</h1>
                 <div class="information">
                     <div class="information__wrapper">
@@ -83,7 +84,7 @@
             </div>
         </section>
         <section class="center-card">
-            <div class="container">
+            <div class="container-inner">
                 <div class="center-card__wrapper">
                     <div class="center-card__section">
                         <h2 class="center-card__title">
@@ -106,12 +107,13 @@
             </div>
         </section>
         <section class="right-card" >
-            <div class="container_large container">
+            <div class="container-large  container-inner">
                 <div class="right-card__descr">
                     It is very important for me to have fresh, tasty products at hand.
                 </div>
             </div>
         </section>
+    </div>
     </main>
     <script src="js/script.js" ></script>
 </body>
