second fix mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -17,41 +17,41 @@
                 <div class="info">
                     <div class="info__wrapper">
                         <div class="info__inner">
-                            <div class="info__icon">
-                                <img src="icons/bag.svg" alt="location">
+                            <div class="info__icon-wrapper">
+                                <img src="icons/bag.svg" class="info__icon" alt="location">
                             </div>
                             <div class="info__descr">
-                                Location
-                                <span>Copenhagen, Denmark
+                                <p class="info__descr_grey">Occupation</p>
+                                <span class="info__descr_little">Sales Manager
                                 </span>
                             </div>
                         </div> 
                         <div class="info__inner">
-                            <div class="info__icon">
-                                <img src="icons/location.svg" alt="location">
+                            <div class="info__icon-wrapper">
+                                <img src="icons/location.svg" class="info__icon" alt="location">
                             </div>
                             <div class="info__descr">
-                                Location
-                                <span>Copenhagen, Denmark
+                                <p class="info__descr_grey">Location</p>
+                                <span class="info__descr_little">Copenhagen, Denmark
                                 </span>
                             </div>
                         </div>              
                         <div class="info__inner">
-                            <div class="info__icon">
-                                <img src="icons/person.svg" alt="person">
+                            <div class="info__icon-wrapper">
+                                <img src="icons/person.svg" class="info__icon-wrapper" alt="person">
                             </div>
                             <div class="info__descr">
-                                Age
-                                <span>44</span>
+                                <p class="info__descr_grey">Age</p>
+                                <span class="info__descr_little">44</span>
                             </div>
                         </div>
                         <div class="info__inner">
-                            <div class="info__icon">
-                                <img src="icons/home.svg" alt="home">
+                            <div class="info__icon-wrapper">
+                                <img src="icons/home.svg" class="info__icon" alt="home">
                             </div>
                             <div class="info__descr">
-                                Family
-                                <span>Married. 2 children.</span>
+                                <p class="info__descr_grey">Family</p>
+                                <span class="info__descr_little">Married. 2 children.</span>
                             </div>
                         </div>
                     </div>    
@@ -64,19 +64,19 @@
                             <div class="tech__skills-inner">
                                 <div class="tech__descr">Internet</div>
                                 <div class="tech__skill">
-                                    <span class="tech__skill_size-1"></span>
+                                    <span class="tech__skill_size" style="width: 50%;"></span>
                                 </div>
                             </div>
                             <div class="tech__skills-inner">
                                 <div class="tech__descr">Social Media</div>
                                 <div class="tech__skill">
-                                    <span class="tech__skill_size-2"></span>
+                                    <span class="tech__skill_size" style="width: 35%;"></span>
                                 </div>
                             </div>
                             <div class="tech__skills-inner">
                                 <div class="tech__descr">Online Shopping</div>
                                 <div class="tech__skill">
-                                    <span class="tech__skill_size-3"></span>
+                                    <span class="tech__skill_size" style="width: 50%;"></span>
                                 </div>
                             </div>    
                         </div>
@@ -90,7 +90,7 @@
                     <h2 class="text__title">Biography</h2>
                     <p class="text__descr">Alma and her husband have 2 kids: a teenager and a 9-year-old. Now they can focus more on their carreers but their main worry is about their sons education and health. With a busy week days, the time they can really get togther as a family is during the dinners time and weekends. So their meal is a really special part of their days. She loves to use avocados in her diet. Interested in gardening.</p>
                 </div>
-                <div class="text">
+                <div class="text text_mt">
                     <h2 class="text__title">Needs</h2>
                     <ul class="text__descr  text__descr_shift-right">
                         <li class="text__item">Be ready for holiday family gathering as well as for light dinner during the day.</li>
@@ -98,7 +98,7 @@
                         <li class="text__item">Wise choices of the brands and respect to environment and sustainability is fundamental for her.</li>
                     </ul>
                 </div>
-                <div class="text">
+                <div class="text text_mt">
                     <h2 class="text__title">Pain points</h2>
                     <p class="text__descr">Alma need to find flexible solution that can help her to optimize her time while dedicating herself to her carreer, kids and making sure to maintain a health lifestyle. </p>
                 </div>
